@@ -1,22 +1,23 @@
 #!/usr/bin/env bash
 
-MODULE_TEMPLATE_DIR="revanced-magisk"
+MODULE_TEMPLATE_DIR="module"
 CWD=$(pwd)
 TEMP_DIR="temp"
 BIN_DIR="bin"
 BUILD_DIR="build"
+DL_SRCS=("direct" "archive" "apkmirror" "uptodown")
 
 if [ "${GITHUB_TOKEN-}" ]; then GH_HEADER="Authorization: token ${GITHUB_TOKEN}"; else GH_HEADER=; fi
 NEXT_VER_CODE=${NEXT_VER_CODE:-$(date +'%Y%m%d')}
 OS=$(uname -o)
 
 toml_prep() {
-  if [ ! -f "$1" ]; then return 1; fi
-  if [ "${1##*.}" == toml ]; then
-    __TOML__=$($TOML --output json --file "$1" .)
-  elif [ "${1##*.}" == json ]; then
-    __TOML__=$(cat "$1")
-  else abort "config extension not supported"; fi
+	if [ ! -f "$1" ]; then return 1; fi
+	if [ "${1##*.}" == toml ]; then
+		__TOML__=$($TOML --output json --file "$1" .)
+	elif [ "${1##*.}" == json ]; then
+		__TOML__=$(cat "$1")
+	else abort "config extension not supported"; fi
 }
 toml_get_table_names() { jq -r -e 'to_entries[] | select(.value | type == "object") | .key' <<<"$__TOML__"; }
 toml_get_table_main() { jq -r -e 'to_entries | map(select(.value | type != "object")) | from_entries' <<<"$__TOML__"; }
@@ -37,74 +38,77 @@ toml_get() {
 
 pr() { echo -e "\033[0;32m[+] ${1}\033[0m"; }
 epr() {
-  echo >&2 -e "\033[0;31m[-] ${1}\033[0m"
-  if [ "${GITHUB_REPOSITORY-}" ]; then echo -e "::error::utils.sh [-] ${1}\n"; fi
+	echo >&2 -e "\033[0;31m[-] ${1}\033[0m"
+	if [ "${GITHUB_REPOSITORY-}" ]; then echo >&2 -e "::error::utils.sh [-] ${1}\n"; fi
+}
+wpr() {
+	echo >&2 -e "\033[0;33m[!] ${1}\033[0m"
+	if [ "${GITHUB_REPOSITORY-}" ]; then echo >&2 -e "::warning::utils.sh [!] ${1}\n"; fi
 }
 abort() {
-  epr "ABORT: ${1-}"
-  exit 1
+	epr "ABORT: ${1-}"
+	rm -rf ./${TEMP_DIR}/*tmp.* ./${TEMP_DIR}/*/*tmp.* ./${TEMP_DIR}/*-temporary-files
+	kill -n 9 0
 }
+java() { env -i java --enable-native-access=ALL-UNNAMED "$@"; }
 
 build_patches_from_gitlab() {
-  local gl_path=$1 ver=$2 cl_dir=$3
-  local gl_api="https://gitlab.com/api/v4/projects/${gl_path//\//%2F}"
-  local cache_dir="${TEMP_DIR}/gitlab-rv"
-  mkdir -p "$cache_dir"
+	local gl_path=$1 ver=$2 cl_dir=$3
+	local gl_api="https://gitlab.com/api/v4/projects/${gl_path//\//%2F}"
+	local cache_dir="${TEMP_DIR}/gitlab-rv"
+	mkdir -p "$cache_dir"
 
-  if [ "$ver" = "dev" ] || [ "$ver" = "latest" ]; then
-    local resp
-    resp=$(curl -fsSL "${gl_api}/releases?per_page=20") || { epr "GitLab releases request failed"; return 1; }
-    if [ "$ver" = "dev" ]; then
-      ver=$(jq -r '.[0].tag_name' <<<"$resp")
-    else
-      ver=$(jq -r '.[] | .tag_name | select(test("-dev|-alpha|-beta|-rc") | not)' <<<"$resp" | head -1)
-    fi
-  fi
-  [ -z "$ver" ] && { epr "Could not resolve GitLab version"; return 1; }
+	if [ "$ver" = "dev" ] || [ "$ver" = "latest" ]; then
+		local resp
+		resp=$(curl -fsSL "${gl_api}/releases?per_page=20") || { epr "GitLab releases request failed"; return 1; }
+		if [ "$ver" = "dev" ]; then
+			ver=$(jq -r '.[0].tag_name' <<<"$resp")
+		else
+			ver=$(jq -r '.[] | .tag_name | select(test("-dev|-alpha|-beta|-rc") | not)' <<<"$resp" | head -1)
+		fi
+	fi
+	[ -z "$ver" ] && { epr "Could not resolve GitLab version"; return 1; }
 
-  local ver_plain="${ver#v}"
-  local cache_file="${cache_dir}/patches-${ver_plain}.rvp"
+	local ver_plain="${ver#v}"
+	local cache_file="${cache_dir}/patches-${ver_plain}.rvp"
 
-  if [ -f "$cache_file" ]; then
-    pr "Using cached GitLab patches ${ver}" >&2
-    echo "Patches: ${gl_path##*/}-${ver_plain}.rvp  " >>"${cl_dir}/changelog.md"
-    echo "$cache_file"
-    return 0
-  fi
+	if [ -f "$cache_file" ]; then
+		pr "Using cached GitLab patches ${ver}" >&2
+		echo "Patches: ${gl_path##*/}-${ver_plain}.rvp  " >>"${cl_dir}/changelog.md"
+		echo "$cache_file"
+		return 0
+	fi
 
-  # PACKAGES_TOKEN must have read:packages scope; GITHUB_TOKEN only covers same-org packages
-  local gh_token="${PACKAGES_TOKEN:-${GITHUB_TOKEN:-$(gh auth token 2>/dev/null || true)}}"
+	# PACKAGES_TOKEN must have read:packages; GITHUB_TOKEN only covers same-org packages
+	local gh_token="${PACKAGES_TOKEN:-${GITHUB_TOKEN:-$(gh auth token 2>/dev/null || true)}}"
 
-  pr "Building patches from gitlab:${gl_path} ${ver}" >&2
-  local src_url="https://gitlab.com/${gl_path}/-/archive/${ver}/${gl_path##*/}-${ver}.zip"
-  local src_zip="${cache_dir}/src-${ver}.zip"
-  curl -fsSL --progress-bar "$src_url" -o "$src_zip" >&2 || { epr "Source download failed"; return 1; }
+	pr "Building patches from gitlab:${gl_path} ${ver}" >&2
+	local src_url="https://gitlab.com/${gl_path}/-/archive/${ver}/${gl_path##*/}-${ver}.zip"
+	local src_zip="${cache_dir}/src-${ver}.zip"
+	curl -fsSL --progress-bar "$src_url" -o "$src_zip" >&2 || { epr "Source download failed"; return 1; }
 
-  local build_dir="${cache_dir}/build-${ver}"
-  rm -rf "$build_dir"
-  mkdir -p "$build_dir"
-  unzip -q "$src_zip" -d "$build_dir" >&2 || return 1
-  local src_dir
-  src_dir="${build_dir}/$(ls "$build_dir" | head -1)"
+	local build_dir="${cache_dir}/build-${ver}"
+	rm -rf "$build_dir"
+	mkdir -p "$build_dir"
+	unzip -q "$src_zip" -d "$build_dir" >&2 || return 1
+	local src_dir
+	src_dir="${build_dir}/$(ls "$build_dir" | head -1)"
 
-  # Extract the required plugin version from settings.gradle.kts
-  local plugin_ver
-  plugin_ver=$(sed -n 's/.*id("app.revanced.patches") version "\([^"]*\)".*/\1/p' "${src_dir}/settings.gradle.kts")
+	local plugin_ver
+	plugin_ver=$(sed -n 's/.*id("app.revanced.patches") version "\([^"]*\)".*/\1/p' "${src_dir}/settings.gradle.kts")
 
-  # Build the Gradle plugin and install to local Maven if not already cached
-  local plugin_jar="${HOME}/.m2/repository/app/revanced/revanced-patches-gradle-plugin/${plugin_ver}/revanced-patches-gradle-plugin-${plugin_ver}.jar"
-  if [ ! -f "$plugin_jar" ]; then
-    local plugin_dir="${cache_dir}/plugin-${plugin_ver}"
-    if [ ! -d "$plugin_dir" ]; then
-      pr "Cloning revanced-patches-gradle-plugin v${plugin_ver}" >&2
-      git clone --quiet --depth 1 --branch "v${plugin_ver}" \
-        "https://github.com/ReVanced/revanced-patches-gradle-plugin.git" \
-        "$plugin_dir" >&2 || return 1
-    fi
-    pr "Installing plugin to local Maven" >&2
-    # Init script disables GPG signing so publishToMavenLocal works without a key
-    local nosign_init="${CWD}/${TEMP_DIR}/nosign.gradle"
-    cat >"$nosign_init" <<'GRADLE'
+	local plugin_jar="${HOME}/.m2/repository/app/revanced/revanced-patches-gradle-plugin/${plugin_ver}/revanced-patches-gradle-plugin-${plugin_ver}.jar"
+	if [ ! -f "$plugin_jar" ]; then
+		local plugin_dir="${cache_dir}/plugin-${plugin_ver}"
+		if [ ! -d "$plugin_dir" ]; then
+			pr "Cloning revanced-patches-gradle-plugin v${plugin_ver}" >&2
+			git clone --quiet --depth 1 --branch "v${plugin_ver}" \
+				"https://github.com/ReVanced/revanced-patches-gradle-plugin.git" \
+				"$plugin_dir" >&2 || return 1
+		fi
+		pr "Installing plugin to local Maven" >&2
+		local nosign_init="${CWD}/${TEMP_DIR}/nosign.gradle"
+		cat >"$nosign_init" <<'GRADLE'
 allprojects {
     afterEvaluate {
         tasks.withType(org.gradle.plugins.signing.Sign) {
@@ -113,28 +117,26 @@ allprojects {
     }
 }
 GRADLE
-    # On macOS, Homebrew JDK lacks the .jdk/Contents/Home suffix Gradle needs for class roots
-    local brew_jdk17="/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home"
-    if [ -d "$brew_jdk17" ]; then
-      echo "org.gradle.java.installations.paths=${brew_jdk17}" >>"$plugin_dir/gradle.properties"
-    fi
-    (
-      cd "$plugin_dir" || return 1
-      chmod +x gradlew
-      ./gradlew publishToMavenLocal \
-        --init-script "$nosign_init" \
-        --no-daemon --quiet
-    ) >&2 || {
-      # Remove partial install so next run retries
-      rm -rf "${HOME}/.m2/repository/app/revanced/revanced-patches-gradle-plugin/${plugin_ver}"
-      rm -rf "${HOME}/.m2/repository/app/revanced/patches/app.revanced.patches.gradle.plugin/${plugin_ver}"
-      epr "Plugin build/install failed"
-      return 1
-    }
-  fi
+		# Homebrew JDK on macOS lacks the .jdk/Contents/Home suffix Gradle needs
+		local brew_jdk17="/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home"
+		if [ -d "$brew_jdk17" ]; then
+			echo "org.gradle.java.installations.paths=${brew_jdk17}" >>"$plugin_dir/gradle.properties"
+		fi
+		(
+			cd "$plugin_dir" || return 1
+			chmod +x gradlew
+			./gradlew publishToMavenLocal \
+				--init-script "$nosign_init" \
+				--no-daemon --quiet
+		) >&2 || {
+			rm -rf "${HOME}/.m2/repository/app/revanced/revanced-patches-gradle-plugin/${plugin_ver}"
+			rm -rf "${HOME}/.m2/repository/app/revanced/patches/app.revanced.patches.gradle.plugin/${plugin_ver}"
+			epr "Plugin build/install failed"
+			return 1
+		}
+	fi
 
-  # Patch settings.gradle.kts: prepend mavenLocal() so the locally built plugin is found first
-  python3 - "$src_dir/settings.gradle.kts" <<'PYEOF' >&2
+	python3 - "$src_dir/settings.gradle.kts" <<'PYEOF' >&2
 import sys
 f = sys.argv[1]
 c = open(f).read()
@@ -142,400 +144,405 @@ c = c.replace('gradlePluginPortal()', 'mavenLocal()\n        gradlePluginPortal(
 open(f, 'w').write(c)
 PYEOF
 
-  pr "Running Gradle build (this may take a while)..." >&2
-  local gh_user
-  gh_user="${GITHUB_ACTOR:-$(gh api user -q '.login' 2>/dev/null || echo "x")}"
-  local -a gradle_opts=("-PgithubPackagesUsername=${gh_user}" "-PgithubPackagesPassword=${gh_token:-x}")
-  (
-    cd "$src_dir" || return 1
-    chmod +x gradlew
-    ./gradlew "${gradle_opts[@]}" :patches:buildAndroid \
-      --no-daemon --quiet
-  ) >&2 || { epr "Gradle build failed"; return 1; }
+	pr "Running Gradle build (this may take a while)..." >&2
+	local gh_user
+	gh_user="${GITHUB_ACTOR:-$(gh api user -q '.login' 2>/dev/null || echo "x")}"
+	local -a gradle_opts=("-PgithubPackagesUsername=${gh_user}" "-PgithubPackagesPassword=${gh_token:-x}")
+	(
+		cd "$src_dir" || return 1
+		chmod +x gradlew
+		./gradlew "${gradle_opts[@]}" :patches:buildAndroid \
+			--no-daemon --quiet
+	) >&2 || { epr "Gradle build failed"; return 1; }
 
-  local rvp
-  rvp=$(find "${src_dir}/patches/build/libs" -name "patches-*.rvp" \
-    ! -name "*-sources*" ! -name "*-javadoc*" 2>/dev/null | head -1)
-  [ -z "$rvp" ] && { epr "Built .rvp not found in patches/build/libs"; return 1; }
+	local rvp
+	rvp=$(find "${src_dir}/patches/build/libs" -name "patches-*.rvp" \
+		! -name "*-sources*" ! -name "*-javadoc*" 2>/dev/null | head -1)
+	[ -z "$rvp" ] && { epr "Built .rvp not found in patches/build/libs"; return 1; }
 
-  cp "$rvp" "$cache_file"
-  echo "Patches: ${gl_path##*/}-${ver_plain}.rvp  " >>"${cl_dir}/changelog.md"
-  echo -e "[Changelog](https://gitlab.com/${gl_path}/-/releases/${ver})\n" >>"${cl_dir}/changelog.md"
-  echo "$cache_file"
+	cp "$rvp" "$cache_file"
+	echo "Patches: ${gl_path##*/}-${ver_plain}.rvp  " >>"${cl_dir}/changelog.md"
+	echo -e "[Changelog](https://gitlab.com/${gl_path}/-/releases/${ver})\n" >>"${cl_dir}/changelog.md"
+	echo "$cache_file"
 }
 
-get_rv_prebuilts() {
-  local cli_src=$1 cli_ver=$2 patches_src=$3 patches_ver=$4
-  local _norm="${patches_src#gitlab:}"
-  pr "Getting prebuilts (${_norm%/*})" >&2
-  local cl_dir=${_norm%/*}
-  cl_dir=${TEMP_DIR}/${cl_dir,,}-rv
-  [ -d "$cl_dir" ] || mkdir "$cl_dir"
-  for src_ver in "$cli_src CLI $cli_ver revanced-cli" "$patches_src Patches $patches_ver patches"; do
-    set -- $src_ver
-    local src=$1 tag=$2 ver=${3-} fprefix=$4
-    local ext
-    if [ "$tag" = "CLI" ]; then
-      ext="jar"
-      local grab_cl=false
-    elif [ "$tag" = "Patches" ]; then
-      ext="rvp"
-      local grab_cl=true
-    else abort unreachable; fi
+get_prebuilts() {
+	local cli_src=$1 cli_ver=$2 patches_src=$3 patches_ver=$4
+	local _norm="${patches_src#gitlab:}"
+	pr "Getting prebuilts (${_norm%/*})" >&2
+	local cl_dir=${_norm%/*}
+	cl_dir=${TEMP_DIR}/${cl_dir,,}-rv
+	[ -d "$cl_dir" ] || mkdir "$cl_dir"
 
-    if [ "$tag" = "Patches" ] && [[ "$src" == gitlab:* ]]; then
-      local glab_file
-      glab_file=$(build_patches_from_gitlab "${src#gitlab:}" "$ver" "$cl_dir") || return 1
-      echo -n "$glab_file "
-      continue
-    fi
+	for src_ver in "$cli_src CLI $cli_ver cli" "$patches_src Patches $patches_ver patches"; do
+		set -- $src_ver
+		local src=$1 tag=$2 ver=${3-} fprefix=$4
 
-    local dir=${src%/*}
-    dir=${TEMP_DIR}/${dir,,}-rv
-    [ -d "$dir" ] || mkdir "$dir"
+		if [ "$tag" = "CLI" ]; then
+			local grab_cl=false
+		elif [ "$tag" = "Patches" ]; then
+			local grab_cl=true
+		else abort unreachable; fi
 
-    local rv_rel="https://api.github.com/repos/${src}/releases" name_ver
-    if [ "$ver" = "dev" ]; then
-      local resp
-      resp=$(gh_req "$rv_rel" -) || return 1
-      ver=$(jq -e -r '.[] | .tag_name' <<<"$resp" | get_highest_ver) || return 1
-    fi
-    if [ "$ver" = "latest" ]; then
-      rv_rel+="/latest"
-      name_ver="*"
-    else
-      rv_rel+="/tags/${ver}"
-      name_ver="$ver"
-    fi
+		if [ "$tag" = "Patches" ] && [[ "$src" == gitlab:* ]]; then
+			local glab_file
+			glab_file=$(build_patches_from_gitlab "${src#gitlab:}" "$ver" "$cl_dir") || return 1
+			echo -n "$glab_file "
+			continue
+		fi
 
-    local url file tag_name name
-    file=$(find "$dir" -name "${fprefix}-${name_ver#v}.${ext}" -type f 2>/dev/null)
-    if [ -z "$file" ]; then
-      local resp asset name
-      resp=$(gh_req "$rv_rel" -) || return 1
-      tag_name=$(jq -r '.tag_name' <<<"$resp")
-      asset=$(jq -e -r ".assets[] | select(.name | endswith(\"$ext\"))" <<<"$resp") || return 1
-      url=$(jq -r .url <<<"$asset")
-      name=$(jq -r .name <<<"$asset")
-      file="${dir}/${name}"
-      gh_dl "$file" "$url" >&2 || return 1
-      echo "$tag: $(cut -d/ -f1 <<<"$src")/${name}  " >>"${cl_dir}/changelog.md"
-    else
-      grab_cl=false
-      local for_err=$file
-      if [ "$ver" = "latest" ]; then
-        file=$(grep -v '/[^/]*dev[^/]*$' <<<"$file" | head -1)
-      else file=$(grep "/[^/]*${ver#v}[^/]*\$" <<<"$file" | head -1); fi
-      if [ -z "$file" ]; then abort "filter fail: '$for_err' with '$ver'"; fi
-      name=$(basename "$file")
-      tag_name=$(cut -d'-' -f3- <<<"$name")
-      tag_name=v${tag_name%.*}
-    fi
-    if [ "$tag" = "Patches" ]; then
-      if [ $grab_cl = true ]; then echo -e "[Changelog](https://github.com/${src}/releases/tag/${tag_name})\n" >>"${cl_dir}/changelog.md"; fi
-      if [ "$REMOVE_RV_INTEGRATIONS_CHECKS" = true ]; then
-        if ! (
-          mkdir -p "${file}-zip" || return 1
-          unzip -qo "${file}" -d "${file}-zip" || return 1
-          java -cp "${BIN_DIR}/paccer.jar:${BIN_DIR}/dexlib2.jar" com.jhc.Main "${file}-zip/extensions/shared.rve" "${file}-zip/extensions/shared-patched.rve" || return 1
-          mv -f "${file}-zip/extensions/shared-patched.rve" "${file}-zip/extensions/shared.rve" || return 1
-          rm "${file}" || return 1
-          cd "${file}-zip" || abort
-          zip -0rq "${CWD}/${file}" . || return 1
-        ) >&2; then
-          echo >&2 "Patching revanced-integrations failed"
-        fi
-        rm -r "${file}-zip" || :
-      fi
-    fi
-    echo -n "$file "
-  done
-  echo
+		local dir=${src%/*}
+		dir=${TEMP_DIR}/${dir,,}-rv
+		[ -d "$dir" ] || mkdir "$dir"
+
+		local rv_rel="https://api.github.com/repos/${src}/releases" name_ver
+		if [ "$ver" = "dev" ]; then
+			local resp
+			resp=$(gh_req "$rv_rel" -) || return 1
+			ver=$(jq -e -r '.[] | .tag_name' <<<"$resp" | get_highest_ver) || return 1
+		fi
+		if [ "$ver" = "latest" ]; then
+			rv_rel+="/latest"
+			name_ver="*"
+		else
+			rv_rel+="/tags/${ver}"
+			name_ver="$ver"
+		fi
+
+		local url file tag_name matches
+		file=$(find "$dir" -name "*${fprefix}-${name_ver#v}.*" -type f 2>/dev/null)
+		if [ -z "$file" ]; then
+			local resp asset name
+			resp=$(gh_req "$rv_rel" -) || return 1
+			tag_name=$(jq -r '.tag_name' <<<"$resp") || return 1
+			matches=$(jq -e '.assets | map(select(.name | (endswith("asc") or endswith("json")) | not))' <<<"$resp") || return 1
+			if [ "$(jq 'length' <<<"$matches")" -gt 1 ]; then
+				local matches_new
+				matches_new=$(jq -e -r 'map(select(.name | contains("-dev") | not))' <<<"$matches")
+				if [ "$(jq 'length' <<<"$matches_new")" -eq 1 ]; then
+					matches=$matches_new
+				fi
+			fi
+			if [ "$(jq 'length' <<<"$matches")" -eq 0 ]; then
+				epr "No asset was found"
+				return 1
+			elif [ "$(jq 'length' <<<"$matches")" -ne 1 ]; then
+				wpr "More than 1 asset was found for this release. Falling back to the first one found..."
+			fi
+			asset=$(jq -r ".[0]" <<<"$matches")
+			url=$(jq -r .url <<<"$asset")
+			name=$(jq -r .name <<<"$asset")
+			file="${dir}/${name}"
+			gh_dl "$file" "$url" >&2 || return 1
+			echo "$tag: $(cut -d/ -f1 <<<"$src")/${name}  " >>"${cl_dir}/changelog.md"
+		else
+			grab_cl=false
+			local for_err=$file
+			if [ "$ver" = "latest" ]; then
+				file=$(grep -v '/[^/]*dev[^/]*$' <<<"$file" | head -1)
+			else file=$(grep "/[^/]*${ver#v}[^/]*\$" <<<"$file" | head -1); fi
+			if [ -z "$file" ]; then abort "filter fail: '$for_err' with '$ver'"; fi
+			name=$(basename "$file")
+			tag_name=$(cut -d'-' -f3- <<<"$name")
+			tag_name=v${tag_name%.*}
+		fi
+
+		if [ "$tag" = "Patches" ]; then
+			if [ "$grab_cl" = true ]; then echo -e "[Changelog](https://github.com/${src}/releases/tag/${tag_name})\n" >>"${cl_dir}/changelog.md"; fi
+			if [ "$REMOVE_RV_INTEGRATIONS_CHECKS" = true ]; then
+				local extensions_ext
+				extensions_ext=$(unzip -l "${file}" "extensions/shared.*" | grep -o "shared\..*") extensions_ext="${extensions_ext#*.}"
+				if ! (
+					mkdir -p "${file}-zip" || return 1
+					unzip -qo "${file}" -d "${file}-zip" || return 1
+					java -cp "${BIN_DIR}/paccer.jar:${BIN_DIR}/dexlib2.jar" com.jhc.Main "${file}-zip/extensions/shared.${extensions_ext}" "${file}-zip/extensions/shared-patched.${extensions_ext}" || return 1
+					mv -f "${file}-zip/extensions/shared-patched.${extensions_ext}" "${file}-zip/extensions/shared.${extensions_ext}" || return 1
+					rm "${file}" || return 1
+					cd "${file}-zip" || abort
+					zip -0rq "${CWD}/${file}" . || return 1
+				) >&2; then
+					echo >&2 "Patching revanced-integrations failed"
+				fi
+				rm -r "${file}-zip" || :
+			fi
+		fi
+		echo -n "$file "
+	done
+	echo
 }
 
 set_prebuilts() {
-  APKSIGNER="${BIN_DIR}/apksigner.jar"
-  local arch
-  arch=$(uname -m)
-  if [ "$arch" = aarch64 ]; then arch=arm64; elif [ "${arch:0:5}" = "armv7" ]; then arch=arm; fi
-  HTMLQ="${BIN_DIR}/htmlq/htmlq-${arch}"
-  AAPT2="${BIN_DIR}/aapt2/aapt2-${arch}"
-  TOML="${BIN_DIR}/toml/tq-${arch}"
+	APKSIGNER="${BIN_DIR}/apksigner.jar"
+	local arch
+	arch=$(uname -m)
+	if [ "$arch" = aarch64 ]; then arch=arm64; elif [ "${arch:0:5}" = "armv7" ]; then arch=arm; fi
+	HTMLQ="${BIN_DIR}/htmlq/htmlq-${arch}"
+	AAPT2="${BIN_DIR}/aapt2/aapt2-${arch}"
+	TOML="${BIN_DIR}/toml/tq-${arch}"
 }
 
 config_update() {
-  if [ ! -f build.md ]; then abort "build.md not available"; fi
-  declare -A sources
-  : >"$TEMP_DIR"/skipped
-  local upped=()
-  local prcfg=false
-  for table_name in $(toml_get_table_names); do
-    if [ -z "$table_name" ]; then continue; fi
-    t=$(toml_get_table "$table_name")
-    enabled=$(toml_get "$t" enabled) || enabled=true
-    if [ "$enabled" = false ]; then continue; fi
-    PATCHES_SRC=$(toml_get "$t" patches-source) || PATCHES_SRC=$DEF_PATCHES_SRC
-    PATCHES_VER=$(toml_get "$t" patches-version) || PATCHES_VER=$DEF_PATCHES_VER
-    if [[ "$PATCHES_SRC" == gitlab:* ]]; then
-      upped+=("$table_name")
-      prcfg=true
-      continue
-    fi
-    if [[ -v sources["$PATCHES_SRC/$PATCHES_VER"] ]]; then
-      if [ "${sources["$PATCHES_SRC/$PATCHES_VER"]}" = 1 ]; then upped+=("$table_name"); fi
-    else
-      sources["$PATCHES_SRC/$PATCHES_VER"]=0
-      local rv_rel="https://api.github.com/repos/${PATCHES_SRC}/releases"
-      if [ "$PATCHES_VER" = "dev" ]; then
-        last_patches=$(gh_req "$rv_rel" - | jq -e -r '.[0]')
-      elif [ "$PATCHES_VER" = "latest" ]; then
-        last_patches=$(gh_req "$rv_rel/latest" -)
-      else
-        last_patches=$(gh_req "$rv_rel/tags/${ver}" -)
-      fi
-      if ! last_patches=$(jq -e -r '.assets[] | select(.name | endswith("rvp")) | .name' <<<"$last_patches"); then
-        abort oops
-      fi
-      if [ "$last_patches" ]; then
-        if ! OP=$(grep "^Patches: ${PATCHES_SRC%%/*}/" build.md | grep "$last_patches"); then
-          sources["$PATCHES_SRC/$PATCHES_VER"]=1
-          prcfg=true
-          upped+=("$table_name")
-        else
-          echo "$OP" >>"$TEMP_DIR"/skipped
-        fi
-      fi
-    fi
-  done
-  if [ "$prcfg" = true ]; then
-    local query=""
-    for table in "${upped[@]}"; do
-      if [ -n "$query" ]; then query+=" or "; fi
-      query+=".key == \"$table\""
-    done
-    jq "to_entries | map(select(${query} or (.value | type != \"object\"))) | from_entries" <<<"$__TOML__"
-  fi
+	if [ ! -f build.md ]; then abort "build.md not available"; fi
+	declare -A sources
+	: >"$TEMP_DIR"/skipped
+	local upped=()
+	local prcfg=false
+	for table_name in $(toml_get_table_names); do
+		if [ -z "$table_name" ]; then continue; fi
+		t=$(toml_get_table "$table_name")
+		enabled=$(toml_get "$t" enabled) || enabled=true
+		if [ "$enabled" = "false" ]; then continue; fi
+		PATCHES_SRC=$(toml_get "$t" patches-source) || PATCHES_SRC=$DEF_PATCHES_SRC
+		PATCHES_VER=$(toml_get "$t" patches-version) || PATCHES_VER=$DEF_PATCHES_VER
+		if [[ "$PATCHES_SRC" == gitlab:* ]]; then
+			upped+=("$table_name")
+			prcfg=true
+			continue
+		fi
+		if [[ -v sources["$PATCHES_SRC/$PATCHES_VER"] ]]; then
+			if [ "${sources["$PATCHES_SRC/$PATCHES_VER"]}" = 1 ]; then upped+=("$table_name"); fi
+		else
+			sources["$PATCHES_SRC/$PATCHES_VER"]=0
+			local rv_rel="https://api.github.com/repos/${PATCHES_SRC}/releases"
+			if [ "$PATCHES_VER" = "dev" ]; then
+				last_patches=$(gh_req "$rv_rel" - | jq -e -r '.[0]') || continue
+			elif [ "$PATCHES_VER" = "latest" ]; then
+				last_patches=$(gh_req "$rv_rel/latest" -) || continue
+			else
+				last_patches=$(gh_req "$rv_rel/tags/${ver}" -) || continue
+			fi
+			if ! last_patches=$(jq -e -r '.assets[] | select(.name | (endswith("asc") or endswith("json")) | not) | .name' <<<"$last_patches"); then
+				abort "config_update error: '$last_patches'"
+			fi
+			if [ "$last_patches" ]; then
+				if ! OP=$(grep "^Patches: ${PATCHES_SRC%%/*}/" build.md | grep -m1 "$last_patches"); then
+					sources["$PATCHES_SRC/$PATCHES_VER"]=1
+					prcfg=true
+					upped+=("$table_name")
+				else
+					echo "$OP" >>"$TEMP_DIR"/skipped
+				fi
+			fi
+		fi
+	done
+	if [ "$prcfg" = true ]; then
+		local query=""
+		for table in "${upped[@]}"; do
+			if [ -n "$query" ]; then query+=" or "; fi
+			query+=".key == \"$table\""
+		done
+		jq "to_entries | map(select(${query} or (.value | type != \"object\"))) | from_entries" <<<"$__TOML__"
+	fi
 }
 
 _req() {
-  local ip="$1" op="$2"
-  shift 2
-  if [ "$op" = - ]; then
-    if ! curl -L -c "$TEMP_DIR/cookie.txt" -b "$TEMP_DIR/cookie.txt" --connect-timeout 5 --retry 0 --fail -s -S "$@" "$ip"; then
-      epr "Request failed: $ip"
-      return 1
-    fi
-  else
-    if [ -f "$op" ]; then return; fi
-    local dlp
-    dlp="$(dirname "$op")/tmp.$(basename "$op")"
-    if [ -f "$dlp" ]; then
-      while [ -f "$dlp" ]; do sleep 1; done
-      return
-    fi
-    if ! curl -L -c "$TEMP_DIR/cookie.txt" -b "$TEMP_DIR/cookie.txt" --connect-timeout 5 --retry 0 --fail -s -S "$@" "$ip" -o "$dlp"; then
-      epr "Request failed: $ip"
-      return 1
-    fi
-    mv -f "$dlp" "$op"
-  fi
+	local ip="$1" op="$2"
+	shift 2
+	local dlp="$op"
+	if [ "$op" != - ]; then
+		if [ -f "$op" ]; then return; fi
+		dlp="$(dirname "$op")/tmp.$(basename "$op")"
+		if [ -f "$dlp" ]; then
+			while [ -f "$dlp" ]; do sleep 1; done
+			return
+		fi
+	fi
+	if ! curl -L -c "$TEMP_DIR/cookie.txt" -b "$TEMP_DIR/cookie.txt" --connect-timeout 10 --retry 1 --fail -s -S "$@" "$ip" -o "$dlp"; then
+		epr "Request failed: $ip"
+		return 1
+	fi
+	if [ "$dlp" != - ]; then
+		mv -f "$dlp" "$op"
+	fi
 }
 req() { _req "$1" "$2" -H "User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:108.0) Gecko/20100101 Firefox/108.0"; }
 gh_req() { _req "$1" "$2" -H "$GH_HEADER"; }
 gh_dl() {
-  if [ ! -f "$1" ]; then
-    pr "Getting '$1' from '$2'"
-    _req "$2" "$1" -H "$GH_HEADER" -H "Accept: application/octet-stream"
-  fi
+	if [ ! -f "$1" ]; then
+		pr "Getting '$1' from '$2'"
+		_req "$2" "$1" -H "$GH_HEADER" -H "Accept: application/octet-stream"
+	fi
 }
 
 log() { echo -e "$1  " >>"build.md"; }
-
-# Vendor-aware logging
-log_app() {
-  local rv_brand=$1 app_name=$2
-  local target_file
-
-  if [ "$rv_brand" = "RVX" ]; then
-    target_file="${TEMP_DIR}/rvx-apps.md"
-  else
-    target_file="${TEMP_DIR}/official-apps.md"
-  fi
-
-  echo "### $app_name" >>"$target_file"
-}
-
-log_meta() {
-  local rv_brand=$1 key=$2 value=$3
-  local target_file
-
-  if [ "$rv_brand" = "RVX" ]; then
-    target_file="${TEMP_DIR}/rvx-apps.md"
-  else
-    target_file="${TEMP_DIR}/official-apps.md"
-  fi
-
-  echo "- **$key**: $value" >>"$target_file"
-}
-
-log_app_end() {
-  local rv_brand=$1
-  local target_file
-
-  if [ "$rv_brand" = "RVX" ]; then
-    target_file="${TEMP_DIR}/rvx-apps.md"
-  else
-    target_file="${TEMP_DIR}/official-apps.md"
-  fi
-
-  echo "" >>"$target_file"
-}
 get_highest_ver() {
-  local vers m
-  vers=$(tee)
-  m=$(head -1 <<<"$vers")
-  if ! semver_validate "$m"; then echo "$m"; else sort -rV <<<"$vers" | head -1; fi
+	local vers m
+	vers=$(tee)
+	m=$(head -1 <<<"$vers")
+	if ! semver_validate "$m"; then echo "$m"; else sort -rV <<<"$vers" | head -1; fi
 }
 semver_validate() {
-  local a="${1%-*}"
-  local a="${a#v}"
-  local ac="${a//[.0-9]/}"
-  [ ${#ac} = 0 ]
+	local a="${1%-*}"
+	local a="${a#v}"
+	local ac="${a//[.0-9]/}"
+	[ ${#ac} = 0 ]
 }
 get_patch_last_supported_ver() {
-  local list_patches=$1 pkg_name=$2 inc_sel=$3 _exc_sel=$4 _exclusive=$5 # TODO: resolve using all of these
-  local op
-  if [ "$inc_sel" ]; then
-    if ! op=$(awk '{$1=$1}1' <<<"$list_patches"); then
-      epr "list-patches: '$op'"
-      return 1
-    fi
-    local ver vers="" NL=$'\n'
-    while IFS= read -r line; do
-      line="${line:1:${#line}-2}"
-      ver=$(sed -n "/^Name: $line\$/,/^\$/p" <<<"$op" | sed -n "/Compatible versions:/,/^\$/p" | tail -n +2 | awk '{$1=$1}1')
-      vers=${ver}${NL}
-    done <<<"$(list_args "$inc_sel")"
-    vers=$(awk '{$1=$1}1' <<<"$vers")
-    if [ "$vers" ]; then
-      get_highest_ver <<<"$vers"
-      return
-    fi
-  fi
-  if ! op=$(java -jar "$rv_cli_jar" list-versions -p "$rv_patches_jar" -b -f "$pkg_name" 2>&1 | tail -n +3 | awk '{$1=$1}1'); then
-    epr "list-versions: '$op'"
-    return 1
-  fi
-  if [ "$op" = "Any" ]; then return; fi
-  pcount=$(head -1 <<<"$op") pcount=${pcount#*(} pcount=${pcount% *}
-  if [ -z "$pcount" ]; then abort "unreachable: '$pcount'"; fi
-  grep -F "($pcount patch" <<<"$op" | sed 's/ (.* patch.*//' | get_highest_ver || return 1
+	local list_patches=$1 pkg_name=$2 inc_sel=$3 _exc_sel=$4 _exclusive=$5 # TODO: resolve using all of these
+	local op
+	if [ "$inc_sel" ]; then
+		if ! op=$(awk '{$1=$1}1' <<<"$list_patches"); then
+			epr "list-patches: '$op'"
+			return 1
+		fi
+		local ver vers="" NL=$'\n'
+		while IFS= read -r line; do
+			line="${line:1:${#line}-2}"
+			ver=$(sed -n "/^Name: $line\$/,/^\$/p" <<<"$op" | sed -n "/Compatible versions:/,/^\$/p" | tail -n +2 | awk '{$1=$1}1')
+			vers=${ver}${NL}
+		done <<<"$(list_args "$inc_sel")"
+		vers=$(awk '{$1=$1}1' <<<"$vers")
+		if [ "$vers" ]; then
+			get_highest_ver <<<"$vers"
+			return
+		fi
+	fi
+	op=$(patches_list_versions "$cli_jar" "$patches_jar" "$pkg_name") || return 1
+	op=$(sed -n '/(.* patch.*/,$p' <<<"$op" | awk '{$1=$1}1')
+	if [ "$op" = "Any" ]; then return; fi
+	pcount=$(head -1 <<<"$op") pcount=${pcount#*(} pcount=${pcount% *}
+	if [ -z "$pcount" ]; then
+		abort "No patches found for '$pkg_name' in patches '$patches_jar'"
+	fi
+	grep -F "($pcount patch" <<<"$op" | sed 's/ (.* patch.*//' | get_highest_ver || return 1
+}
+
+patches_list_versions() {
+	local cli_jar=$1 patches_jar=$2 pkg_name=$3 op
+	if ! op=$(java -jar "$cli_jar" list-versions -p "$patches_jar" -f "$pkg_name" -b 2>&1); then
+		if ! op=$(java -jar "$cli_jar" list-versions "$patches_jar" -f "$pkg_name" 2>&1); then
+			epr "Could not list versions $cli_jar: '$op'"
+			return 1
+		fi
+	fi
+	echo "$op"
+}
+patches_list() {
+	local cli_jar=$1 patches_jar=$2 pkg_name=$3 op
+	if ! op=$(java -jar "$cli_jar" list-patches -p "$patches_jar" --filter-package-name "$pkg_name" --versions --packages -b 2>&1); then
+		if ! op=$(java -jar "$cli_jar" list-patches --patches "$patches_jar" -f "$pkg_name" --with-versions --with-packages 2>&1); then
+			epr "Could not get patches list $cli_jar: '$op'"
+			return 1
+		fi
+
+	fi
+	echo "$op"
 }
 
 isoneof() {
-  local i=$1 v
-  shift
-  for v; do [ "$v" = "$i" ] && return 0; done
-  return 1
+	local i=$1 v
+	shift
+	for v; do [ "$v" = "$i" ] && return 0; done
+	return 1
 }
 
 merge_splits() {
-  local bundle=$1 output=$2
-  pr "Merging splits"
-  gh_dl "$TEMP_DIR/apkeditor.jar" "https://github.com/REAndroid/APKEditor/releases/download/V1.4.2/APKEditor-1.4.2.jar" >/dev/null || return 1
-  if ! OP=$(java -jar "$TEMP_DIR/apkeditor.jar" merge -i "${bundle}" -o "${bundle}.mzip" -clean-meta -f 2>&1); then
-    epr "Apkeditor ERROR: $OP"
-    return 1
-  fi
-  # this is required because of apksig
-  mkdir "${bundle}-zip"
-  unzip -qo "${bundle}.mzip" -d "${bundle}-zip"
-  (
-    cd "${bundle}-zip" || abort
-    zip -0rq "${CWD}/${bundle}.zip" .
-  )
-  # if building module, sign the merged apk properly
-  if isoneof "module" "${build_mode_arr[@]}"; then
-    patch_apk "${bundle}.zip" "${output}" "--exclusive" "${args[cli]}" "${args[ptjar]}"
-    local ret=$?
-  else
-    cp "${bundle}.zip" "${output}"
-    local ret=$?
-  fi
-  rm -r "${bundle}-zip" "${bundle}.zip" "${bundle}.mzip" || :
-  return $ret
+	local bundle=$1 output=$2
+	pr "Merging splits"
+	gh_dl "$TEMP_DIR/apkeditor.jar" "https://github.com/REAndroid/APKEditor/releases/download/V1.4.7/APKEditor-1.4.7.jar" >/dev/null || return 1
+	if ! OP=$(java -jar "$TEMP_DIR/apkeditor.jar" merge -i "$bundle" -o "${output}-unsigned" -clean-meta -f 2>&1); then
+		epr "APKEditor error: $OP"
+		return 1
+	fi
+	# sign the merged stock apk
+	if ! OP=$(java -jar "$APKSIGNER" sign --ks ks-p12.keystore --ks-pass pass:123456789 --key-pass pass:123456789 --ks-key-alias jhc \
+		--out "${output}" "${output}-unsigned"); then
+		epr "apksigner error: $OP"
+		return 1
+	fi
+	rm "${output}.idsig" "${output}-unsigned" 2>/dev/null || :
+	return 0
 }
 
 # -------------------- apkmirror --------------------
-apk_mirror_search() {
-  local resp="$1" dpi="$2" arch="$3" apk_bundle="$4"
-  local apparch dlurl node app_table
-  if [ "$arch" = all ]; then
-    apparch=(universal noarch 'arm64-v8a + armeabi-v7a')
-  else apparch=("$arch" universal noarch 'arm64-v8a + armeabi-v7a'); fi
-  for ((n = 1; n < 40; n++)); do
-    node=$($HTMLQ "div.table-row.headerFont:nth-last-child($n)" -r "span:nth-child(n+3)" <<<"$resp")
-    if [ -z "$node" ]; then break; fi
-    app_table=$($HTMLQ --text --ignore-whitespace <<<"$node")
-    if [ "$(sed -n 3p <<<"$app_table")" = "$apk_bundle" ] && [ "$(sed -n 6p <<<"$app_table")" = "$dpi" ] &&
-      isoneof "$(sed -n 4p <<<"$app_table")" "${apparch[@]}"; then
-      dlurl=$($HTMLQ --base https://www.apkmirror.com --attribute href "div:nth-child(1) > a:nth-child(1)" <<<"$node")
-      echo "$dlurl"
-      return 0
-    fi
-  done
-  return 1
+apkmirror_search() {
+	local resp="$1" dpi="$2" arch="$3" apk_bundle="$4"
+	local dlurl="" node app_table emptyCheck
+
+	local apparch=('universal' 'noarch' 'arm64-v8a + armeabi-v7a')
+	if [ "$arch" != all ]; then
+		apparch+=("$arch")
+	fi
+
+	local appdpi=("nodpi" "anydpi")
+	if [ "$dpi" ]; then
+		appdpi+=($dpi)
+	fi
+
+	for ((n = 1; n < 40; n++)); do
+		node=$($HTMLQ "div.table-row.headerFont:nth-last-child($n)" -r "span:nth-child(n+3)" <<<"$resp")
+		if [ -z "$node" ]; then break; fi
+		emptyCheck=$($HTMLQ -t -w "div.table-cell:nth-child(1) > a:nth-child(1)" <<<"$node" | xargs)
+		if [ "$emptyCheck" ]; then
+			dlurl=$($HTMLQ --base https://www.apkmirror.com --attribute href "div:nth-child(1) > a:nth-child(1)" <<<"$node")
+		else break; fi
+		app_table=$($HTMLQ --text --ignore-whitespace <<<"$node")
+		if [ "$(sed -n 3p <<<"$app_table")" = "$apk_bundle" ] &&
+			isoneof "$(sed -n 6p <<<"$app_table")" "${appdpi[@]}" &&
+			isoneof "$(sed -n 4p <<<"$app_table")" "${apparch[@]}"; then
+			echo "$dlurl"
+			return 0
+		fi
+	done
+	if [ "$n" -eq 2 ] && [ "$dlurl" ]; then
+		# only one apk exists, return it
+		echo "$dlurl"
+		return 0
+	fi
+	return 1
 }
 dl_apkmirror() {
 	local url=$1 version=${2// /-} output=$3 arch=$4 dpi=$5 is_bundle=false
+
 	if [ -f "${output}.apkm" ]; then
-		is_bundle=true
-	else
-		if [ "$arch" = "arm-v7a" ]; then arch="armeabi-v7a"; fi
-		local resp node app_table apkmname dlurl=""
-		apkmname=$($HTMLQ "h1.marginZero" --text <<<"$__APKMIRROR_RESP__")
-		apkmname="${apkmname,,}" apkmname="${apkmname// /-}" apkmname="${apkmname//[^a-z0-9-]/}"
-		url="${url}/${apkmname}-${version//./-}-release/"
-		resp=$(req "$url" -) || return 1
-		node=$($HTMLQ "div.table-row.headerFont:nth-last-child(1)" -r "span:nth-child(n+3)" <<<"$resp")
-		if [ "$node" ]; then
-			for current_dpi in $dpi; do
-				for type in APK BUNDLE; do
-					if dlurl=$(apk_mirror_search "$resp" "$current_dpi" "${arch}" "$type"); then
-						[[ "$type" == "BUNDLE" ]] && is_bundle=true || is_bundle=false
-						break 2
-					fi
-				done
-			done
-			[ -z "$dlurl" ] && return 1
-			resp=$(req "$dlurl" -)
-		fi
-		url=$(echo "$resp" | $HTMLQ --base https://www.apkmirror.com --attribute href "a.btn") || return 1
-		url=$(req "$url" - | $HTMLQ --base https://www.apkmirror.com --attribute href "span > a[rel = nofollow]") || return 1
+		merge_splits "${output}.apkm" "${output}"
+		return 0
 	fi
 
-  if [ "$is_bundle" = true ]; then
-    req "$url" "${output}.apkm" || return 1
-    merge_splits "${output}.apkm" "${output}"
-  else
-    req "$url" "${output}" || return 1
-  fi
+	if [ "$arch" = "arm-v7a" ]; then arch="armeabi-v7a"; fi
+	local resp node app_table apkmname dlurl=""
+	apkmname=$($HTMLQ "h1.marginZero" --text <<<"$__APKMIRROR_RESP__")
+	apkmname="${apkmname,,}" apkmname="${apkmname// /-}" apkmname="${apkmname//[^a-z0-9-]/}"
+	url="${url}/${apkmname}-${version//./-}-release/"
+	resp=$(req "$url" -) || return 1
+	node=$($HTMLQ "div.table-row.headerFont:nth-last-child(1)" -r "span:nth-child(n+3)" <<<"$resp")
+	if [ "$node" ]; then
+		for type in APK BUNDLE; do
+			if dlurl=$(apkmirror_search "$resp" "$dpi" "$arch" "$type"); then
+				if [ "$type" = "BUNDLE" ]; then
+					is_bundle=true
+				else is_bundle=false; fi
+				break 2
+			fi
+		done
+		if [ -z "$dlurl" ]; then return 1; fi
+		resp=$(req "$dlurl" -)
+	fi
+	url=$(echo "$resp" | $HTMLQ --base https://www.apkmirror.com --attribute href "a.btn") || return 1
+	url=$(req "$url" - | $HTMLQ --base https://www.apkmirror.com --attribute href "span > a[rel = nofollow]") || return 1
+
+	if [ "$is_bundle" = true ]; then
+		req "$url" "${output}.apkm" || return 1
+		merge_splits "${output}.apkm" "${output}"
+	else
+		req "$url" "${output}" || return 1
+	fi
 }
 get_apkmirror_vers() {
-  local vers apkm_resp
-  apkm_resp=$(req "https://www.apkmirror.com/uploads/?appcategory=${__APKMIRROR_CAT__}" -)
-  vers=$(sed -n 's;.*Version:</span><span class="infoSlide-value">\(.*\) </span>.*;\1;p' <<<"$apkm_resp" | awk '{$1=$1}1')
-  if [ "$__AAV__" = false ]; then
-    local IFS=$'\n'
-    vers=$(grep -iv "\(beta\|alpha\)" <<<"$vers")
-    local v r_vers=()
-    for v in $vers; do
-      grep -iq "${v} \(beta\|alpha\)" <<<"$apkm_resp" || r_vers+=("$v")
-    done
-    echo "${r_vers[*]}"
-  else
-    echo "$vers"
-  fi
+	local vers apkm_resp
+	apkm_resp=$(req "https://www.apkmirror.com/uploads/?appcategory=${__APKMIRROR_CAT__}" -)
+	vers=$(sed -n 's;.*Version:</span><span class="infoSlide-value">\(.*\) </span>.*;\1;p' <<<"$apkm_resp" | awk '{$1=$1}1')
+	if [ "$__AAV__" = false ]; then
+		local IFS=$'\n'
+		vers=$(grep -iv "\(beta\|alpha\)" <<<"$vers")
+		local v r_vers=()
+		for v in $vers; do
+			grep -iq "${v} \(beta\|alpha\)" <<<"$apkm_resp" || r_vers+=("$v")
+		done
+		echo "${r_vers[*]}"
+	else
+		echo "$vers"
+	fi
 }
 get_apkmirror_pkg_name() { sed -n 's;.*id=\(.*\)" class="accent_color.*;\1;p' <<<"$__APKMIRROR_RESP__"; }
 get_apkmirror_resp() {
@@ -545,307 +552,353 @@ get_apkmirror_resp() {
 
 # -------------------- uptodown --------------------
 get_uptodown_resp() {
-  __UPTODOWN_RESP__=$(req "${1}/versions" -)
-  __UPTODOWN_RESP_PKG__=$(req "${1}/download" -)
+	__UPTODOWN_RESP__=$(req "${1}/versions" -) || return 1
+	__UPTODOWN_RESP_PKG__=$(req "${1}/download" -) || return 1
 }
 get_uptodown_vers() { $HTMLQ --text ".version" <<<"$__UPTODOWN_RESP__"; }
 dl_uptodown() {
-  local uptodown_dlurl=$1 version=$2 output=$3 arch=$4 _dpi=$5
-  local apparch
-  if [ "$arch" = "arm-v7a" ]; then arch="armeabi-v7a"; fi
-  if [ "$arch" = all ]; then
-    apparch=('arm64-v8a, armeabi-v7a, x86, x86_64' 'arm64-v8a, armeabi-v7a')
-  else apparch=("$arch" 'arm64-v8a, armeabi-v7a, x86, x86_64' 'arm64-v8a, armeabi-v7a'); fi
+	local uptodown_dlurl=$1 version=$2 output=$3 arch=$4 _dpi=$5
+	if [ "$arch" = "arm-v7a" ]; then arch="armeabi-v7a"; fi
 
-  local op resp data_code
-  data_code=$($HTMLQ "#detail-app-name" --attribute data-code <<<"$__UPTODOWN_RESP__")
-  local versionURL=""
-  local is_bundle=false
-  for i in {1..5}; do
-    resp=$(req "${uptodown_dlurl}/apps/${data_code}/versions/${i}" -)
-    if ! op=$(jq -e -r ".data | map(select(.version == \"${version}\")) | .[0]" <<<"$resp"); then
-      continue
-    fi
-    if [ "$(jq -e -r ".kindFile" <<<"$op")" = "xapk" ]; then is_bundle=true; fi
-    if versionURL=$(jq -e -r '.versionURL' <<<"$op"); then break; else return 1; fi
-  done
-  if [ -z "$versionURL" ]; then return 1; fi
-  versionURL=$(jq -e -r '.url + "/" + .extraURL + "/" + (.versionID | tostring)' <<<"$versionURL")
-  resp=$(req "$versionURL" -) || return 1
+	local apparch=('arm64-v8a, armeabi-v7a, x86_64' 'arm64-v8a, armeabi-v7a, x86, x86_64' 'arm64-v8a, armeabi-v7a')
+	if [ "$arch" != all ]; then
+		apparch+=("$arch")
+	fi
 
-  local data_version files node_arch data_file_id
-  data_version=$($HTMLQ '.button.variants' --attribute data-version <<<"$resp") || return 1
-  if [ "$data_version" ]; then
-    files=$(req "${uptodown_dlurl%/*}/app/${data_code}/version/${data_version}/files" - | jq -e -r .content) || return 1
-    for ((n = 1; n < 12; n += 2)); do
-      node_arch=$($HTMLQ ".content > p:nth-child($n)" --text <<<"$files" | xargs) || return 1
-      if [ -z "$node_arch" ]; then return 1; fi
-      if ! isoneof "$node_arch" "${apparch[@]}"; then continue; fi
-      data_file_id=$($HTMLQ "div.variant:nth-child($((n + 1))) > .v-report" --attribute data-file-id <<<"$files") || return 1
-      resp=$(req "${uptodown_dlurl}/download/${data_file_id}-x" -)
-      break
-    done
-  fi
-  local data_url
-  data_url=$($HTMLQ "#detail-download-button" --attribute data-url <<<"$resp") || return 1
-  if [ $is_bundle = true ]; then
-    req "https://dw.uptodown.com/dwn/${data_url}" "$output.apkm" || return 1
-    merge_splits "${output}.apkm" "${output}"
-  else
-    req "https://dw.uptodown.com/dwn/${data_url}" "$output"
-  fi
+	local op resp data_code
+	data_code=$($HTMLQ "#detail-app-name" --attribute data-code <<<"$__UPTODOWN_RESP__")
+	local versionURL=""
+	local is_bundle=false
+	for i in {1..20}; do
+		resp=$(req "${uptodown_dlurl}/apps/${data_code}/versions/${i}" -)
+		if ! op=$(jq -e -r ".data | map(select(.version == \"${version}\")) | .[0]" <<<"$resp"); then
+			continue
+		fi
+		if [ "$(jq -e -r ".kindFile" <<<"$op")" = "xapk" ]; then is_bundle=true; fi
+		if versionURL=$(jq -e -r '.versionURL' <<<"$op"); then break; else return 1; fi
+	done
+	if [ -z "$versionURL" ]; then return 1; fi
+	versionURL=$(jq -e -r '.url + "/" + .extraURL + "/" + (.versionID | tostring)' <<<"$versionURL")
+	resp=$(req "$versionURL" -) || return 1
+
+	local data_version files node_arch="" data_file_id node_class
+	data_version=$($HTMLQ '.button.variants' --attribute data-version <<<"$resp") || return 1
+	if [ "$data_version" ]; then
+		files=$(req "${uptodown_dlurl%/*}/app/${data_code}/version/${data_version}/files" - | jq -e -r .content) || return 1
+		for ((n = 1; n < 12; n += 1)); do
+			node_class=$($HTMLQ -w -t ".content > :nth-child($n)" --attribute class <<<"$files") || return 1
+			if [ "$node_class" != "variant" ]; then
+				node_arch=$($HTMLQ -w -t ".content > :nth-child($n)" <<<"$files" | xargs) || return 1
+				continue
+			fi
+			if [ -z "$node_arch" ]; then return 1; fi
+			if ! isoneof "$node_arch" "${apparch[@]}"; then continue; fi
+
+			file_type=$($HTMLQ -w -t ".content > :nth-child($n) > .v-file > span" <<<"$files") || return 1
+			if [ "$file_type" = "xapk" ]; then is_bundle=true; else is_bundle=false; fi
+			data_file_id=$($HTMLQ ".content > :nth-child($n) > .v-report" --attribute data-file-id <<<"$files") || return 1
+			resp=$(req "${uptodown_dlurl}/download/${data_file_id}-x" -)
+			break
+		done
+		if [ $n -eq 12 ]; then return 1; fi
+	fi
+	local data_url
+	data_url=$($HTMLQ "#detail-download-button" --attribute data-url <<<"$resp") || return 1
+	if [ $is_bundle = true ]; then
+		req "https://dw.uptodown.com/dwn/${data_url}" "$output.apkm" || return 1
+		merge_splits "${output}.apkm" "${output}"
+	else
+		req "https://dw.uptodown.com/dwn/${data_url}" "$output"
+	fi
 }
 get_uptodown_pkg_name() { $HTMLQ --text "tr.full:nth-child(1) > td:nth-child(3)" <<<"$__UPTODOWN_RESP_PKG__"; }
 
 # -------------------- archive --------------------
 dl_archive() {
-  local url=$1 version=$2 output=$3 arch=$4
-  local path version=${version// /}
-  path=$(grep "${version_f#v}-${arch// /}" <<<"$__ARCHIVE_RESP__") || return 1
-  req "${url}/${path}" "$output"
+	local url=$1 version=$2 output=$3 arch=$4
+	local path output_m version=${version// /}
+
+	if [ -f "${output}.apkm" ]; then
+		merge_splits "${output}.apkm" "$output"
+		return 0
+	fi
+
+	path=$(grep -m1 "${version_f#v}-${arch// /}" <<<"$__ARCHIVE_RESP__") || return 1
+	if [ "${path##*.}" = "apkm" ]; then
+		output_m="${output}.apkm"
+	else
+		output_m=$output
+	fi
+	req "${url}/${path}" "$output_m" || return 1
+	if [ "${path##*.}" = "apkm" ]; then
+		merge_splits "$output_m" "$output"
+	fi
 }
 get_archive_resp() {
-  local r
-  r=$(req "$1" -)
-  if [ -z "$r" ]; then return 1; else __ARCHIVE_RESP__=$(sed -n 's;^<a href="\(.*\)"[^"]*;\1;p' <<<"$r"); fi
-  __ARCHIVE_PKG_NAME__=$(awk -F/ '{print $NF}' <<<"$1")
+	local r
+	r=$(req "$1" -)
+	if [ -z "$r" ]; then return 1; else __ARCHIVE_RESP__=$(sed -n 's;^<a href="\(.*\)"[^"]*;\1;p' <<<"$r"); fi
+	__ARCHIVE_PKG_NAME__=$(awk -F/ '{print $NF}' <<<"$1")
 }
 get_archive_vers() { sed 's/^[^-]*-//;s/-\(all\|arm64-v8a\|arm-v7a\)\.apk//g' <<<"$__ARCHIVE_RESP__"; }
 get_archive_pkg_name() { echo "$__ARCHIVE_PKG_NAME__"; }
+
+# -------------------- direct --------------------
+dl_direct() {
+	local url=$1 version=${2// /-} output=$3 arch=$4 _dpi=$5
+	req "$url" "${output}" || return 1
+}
+get_direct_vers() { cut -d- -f2 <<<"$__DIRECT_APKNAME__"; }
+get_direct_pkg_name() { cut -d- -f1 <<<"$__DIRECT_APKNAME__"; }
+get_direct_resp() { __DIRECT_APKNAME__=$(awk -F/ '{print $NF}' <<<"$1"); }
 # --------------------------------------------------
 
 patch_apk() {
-  local stock_input=$1 patched_apk=$2 patcher_args=$3 rv_cli_jar=$4 rv_patches_jar=$5
-  local cmd="env -u GITHUB_REPOSITORY java -jar $rv_cli_jar patch $stock_input --purge -o $patched_apk -p $rv_patches_jar -b --keystore=ks.keystore \
+	local stock_input=$1 patched_apk=$2 patcher_args=$3 cli_jar=$4 patches_jar=$5
+	local cmd="java -jar '$cli_jar' patch '$stock_input' --purge -o '$patched_apk' -p '$patches_jar' --keystore=ks.keystore \
 --keystore-entry-password=123456789 --keystore-password=123456789 --signer=jhc --keystore-entry-alias=jhc $patcher_args"
-  if [ "$OS" = Android ]; then cmd+=" --custom-aapt2-binary=${AAPT2}"; fi
-  pr "$cmd"
-  if eval "$cmd"; then [ -f "$patched_apk" ]; else
-    rm "$patched_apk" 2>/dev/null || :
-    return 1
-  fi
+
+	# TODO: remove this later
+	local cli_name
+	cli_name=$(basename "$cli_jar")
+	if [ "${cli_name::8}" = revanced ]; then cmd+=" -b"; fi
+
+	if [ "$OS" = Android ]; then cmd+=" --custom-aapt2-binary='${AAPT2}'"; fi
+	pr "$cmd"
+	if eval "$cmd"; then [ -f "$patched_apk" ]; else
+		rm "$patched_apk" 2>/dev/null || :
+		return 1
+	fi
 }
 
 check_sig() {
-  local file=$1 pkg_name=$2
-  local sig
-  if grep -q "$pkg_name" sig.txt; then
-    sig=$(java -jar "$APKSIGNER" verify --print-certs "$file" | grep ^Signer | grep SHA-256 | tail -1 | awk '{print $NF}')
-    echo "$pkg_name signature: ${sig}"
-    grep -qFx "$sig $pkg_name" sig.txt
-  fi
+	local file=$1 pkg_name=$2
+	local sig
+	if grep -q "$pkg_name" sig.txt; then
+		sig=$(java -jar "$APKSIGNER" verify --print-certs "$file" | grep ^Signer | grep SHA-256 | tail -1 | awk '{print $NF}')
+		echo "$pkg_name signature: ${sig}"
+		grep -qFx "$sig $pkg_name" sig.txt
+	fi
 }
 
 build_rv() {
-  eval "declare -A args=${1#*=}"
-  local version="" pkg_name=""
-  local mode_arg=${args[build_mode]} version_mode=${args[version]}
-  local app_name=${args[app_name]}
-  local app_name_l=${app_name,,}
-  app_name_l=${app_name_l// /-}
-  local table=${args[table]}
-  local dl_from=${args[dl_from]}
-  local arch=${args[arch]}
-  local arch_f="${arch// /}"
+	eval "declare -A args=${1#*=}"
+	local version="" pkg_name=""
+	local mode_arg=${args[build_mode]} version_mode=${args[version]}
+	local app_name=${args[app_name]}
+	local app_name_l=${app_name,,}
+	app_name_l=${app_name_l// /-}
+	local table=${args[table]}
+	local dl_from=${args[dl_from]}
+	local arch=${args[arch]}
+	local arch_f="${arch// /}"
 
-  local p_patcher_args=()
-  if [ "${args[patcher_args]}" ]; then p_patcher_args+=("${args[patcher_args]}"); fi
-  if [ "${args[excluded_patches]}" ]; then p_patcher_args+=("$(join_args "${args[excluded_patches]}" -d)"); fi
-  if [ "${args[included_patches]}" ]; then p_patcher_args+=("$(join_args "${args[included_patches]}" -e)"); fi
-  [ "${args[exclusive_patches]}" = true ] && p_patcher_args+=("--exclusive")
+	local p_patcher_args=()
+	if [ "${args[excluded_patches]}" ]; then p_patcher_args+=("$(join_args "${args[excluded_patches]}" -d)"); fi
+	if [ "${args[included_patches]}" ]; then p_patcher_args+=("$(join_args "${args[included_patches]}" -e)"); fi
+	[ "${args[exclusive_patches]}" = true ] && p_patcher_args+=("--exclusive")
 
-  local tried_dl=()
-  for dl_p in archive apkmirror uptodown; do
-    if [ -z "${args[${dl_p}_dlurl]}" ]; then continue; fi
-    if ! get_${dl_p}_resp "${args[${dl_p}_dlurl]}" || ! pkg_name=$(get_"${dl_p}"_pkg_name); then
-      args[${dl_p}_dlurl]=""
-      epr "ERROR: Could not find ${table} in ${dl_p}"
-      continue
-    fi
-    tried_dl+=("$dl_p")
-    dl_from=$dl_p
-    break
-  done
-  if [ -z "$pkg_name" ]; then
-    epr "empty pkg name, not building ${table}."
-    return 0
-  fi
-  local list_patches
-  list_patches=$(java -jar "$rv_cli_jar" list-patches -p "$rv_patches_jar" -b --filter-package-name="$pkg_name" --versions --packages 2>&1)
+	local tried_dl=()
+	for dl_p in "${DL_SRCS[@]}"; do
+		if [ -z "${args[${dl_p}_dlurl]}" ]; then continue; fi
+		if ! get_${dl_p}_resp "${args[${dl_p}_dlurl]}" || ! pkg_name=$(get_"${dl_p}"_pkg_name); then
+			args[${dl_p}_dlurl]=""
+			epr "ERROR: Could not find ${table} in ${dl_p}"
+			continue
+		fi
+		tried_dl+=("$dl_p")
+		dl_from=$dl_p
+		break
+	done
+	if [ -z "$pkg_name" ]; then
+		epr "empty pkg name, not building ${table}."
+		return 0
+	fi
+	pr "Package name of '${table}' is '$pkg_name'"
+	local list_patches
+	list_patches=$(patches_list "$cli_jar" "$patches_jar" "$pkg_name") || return 1
+	local get_latest_ver=false
+	if [ "$version_mode" = auto ]; then
+		if ! version=$(get_patch_last_supported_ver "$list_patches" "$pkg_name" \
+			"${args[included_patches]}" "${args[excluded_patches]}" "${args[exclusive_patches]}"); then
+			epr "get_patch_last_supported_ver failed '$list_patches'"
+			return
+		elif [ -z "$version" ]; then get_latest_ver=true; fi
+	elif isoneof "$version_mode" latest beta; then
+		get_latest_ver=true
+		p_patcher_args+=("-f")
+	else
+		version=$version_mode
+		p_patcher_args+=("-f")
+	fi
+	if [ $get_latest_ver = true ]; then
+		if [ "$version_mode" = beta ]; then __AAV__="true"; else __AAV__="false"; fi
+		pkgvers=$(get_"${dl_from}"_vers)
+		version=$(get_highest_ver <<<"$pkgvers") || version=$(head -1 <<<"$pkgvers")
+	fi
+	if [ -z "$version" ]; then
+		epr "empty version, not building ${table}."
+		return 0
+	fi
 
-  local get_latest_ver=false
-  if [ "$version_mode" = auto ]; then
-    if ! version=$(get_patch_last_supported_ver "$list_patches" "$pkg_name" \
-      "${args[included_patches]}" "${args[excluded_patches]}" "${args[exclusive_patches]}"); then
-      exit 1
-    elif [ -z "$version" ]; then get_latest_ver=true; fi
-  elif isoneof "$version_mode" latest beta; then
-    get_latest_ver=true
-    p_patcher_args+=("-f")
-  else
-    version=$version_mode
-    p_patcher_args+=("-f")
-  fi
-  if [ $get_latest_ver = true ]; then
-    if [ "$version_mode" = beta ]; then __AAV__="true"; else __AAV__="false"; fi
-    pkgvers=$(get_"${dl_from}"_vers)
-    version=$(get_highest_ver <<<"$pkgvers") || version=$(head -1 <<<"$pkgvers")
-  fi
-  if [ -z "$version" ]; then
-    epr "empty version, not building ${table}."
-    return 0
-  fi
+	if [ "$mode_arg" = module ]; then
+		build_mode_arr=(module)
+	elif [ "$mode_arg" = apk ]; then
+		build_mode_arr=(apk)
+	elif [ "$mode_arg" = both ]; then
+		build_mode_arr=(apk module)
+	fi
 
-  if [ "$mode_arg" = module ]; then
-    build_mode_arr=(module)
-  elif [ "$mode_arg" = apk ]; then
-    build_mode_arr=(apk)
-  elif [ "$mode_arg" = both ]; then
-    build_mode_arr=(apk module)
-  fi
+	pr "Choosing version '${version}' for ${table}"
+	local version_f=${version// /}
+	version_f=${version_f#v}
+	local stock_apk="${TEMP_DIR}/${pkg_name}-${version_f}-${arch_f}.apk"
+	if [ ! -f "$stock_apk" ]; then
+		for dl_p in "${DL_SRCS[@]}"; do
+			if [ -z "${args[${dl_p}_dlurl]}" ]; then continue; fi
+			pr "Downloading '${table}' from '${dl_p}'"
+			if ! isoneof $dl_p "${tried_dl[@]}"; then
+				if ! get_${dl_p}_resp "${args[${dl_p}_dlurl]}"; then
+					epr "ERROR: Could not get '${table}' from '${dl_p}'"
+					continue
+				fi
+			fi
+			if ! dl_${dl_p} "${args[${dl_p}_dlurl]}" "$version" "$stock_apk" "$arch" "${args[dpi]}" "$get_latest_ver"; then
+				epr "ERROR: Could not download '${table}' from '${dl_p}' with version '${version}', arch '${arch}', dpi '${args[dpi]}'"
+				continue
+			fi
+			break
+		done
+		if [ ! -f "$stock_apk" ]; then
+			epr "Stock apk not found ($stock_apk)"
+			return 0
+		fi
+	fi
 
-  pr "Choosing version '${version}' for ${table}"
-  local version_f=${version// /}
-  version_f=${version_f#v}
-  local stock_apk="${TEMP_DIR}/${pkg_name}-${version_f}-${arch_f}.apk"
-  if [ ! -f "$stock_apk" ]; then
-    for dl_p in archive apkmirror uptodown; do
-      if [ -z "${args[${dl_p}_dlurl]}" ]; then continue; fi
-      pr "Downloading '${table}' from ${dl_p}"
-      if ! isoneof $dl_p "${tried_dl[@]}"; then get_${dl_p}_resp "${args[${dl_p}_dlurl]}"; fi
-      if ! dl_${dl_p} "${args[${dl_p}_dlurl]}" "$version" "$stock_apk" "$arch" "${args[dpi]}" "$get_latest_ver"; then
-        epr "ERROR: Could not download '${table}' from ${dl_p} with version '${version}', arch '${arch}', dpi '${args[dpi]}'"
-        continue
-      fi
-      break
-    done
-    if [ ! -f "$stock_apk" ]; then return 0; fi
-  fi
-  if ! OP=$(check_sig "$stock_apk" "$pkg_name" 2>&1) && ! grep -qFx "ERROR: Missing META-INF/MANIFEST.MF" <<<"$OP"; then
-    epr "$pkg_name not building, apk signature mismatch '$stock_apk': $OP"
-    return 0
-  fi
-  log "${table}: ${version}"
+	local sig_op
+	if [ -f "${stock_apk}.apkm" ]; then
+		rm -rf "${stock_apk}-zip" || :
+		unzip -j "${stock_apk}.apkm" -d "${stock_apk}-zip" >/dev/null
+		for a in "${stock_apk}"-zip/*.apk; do
+			if ! sig_op=$(check_sig "$a" "$pkg_name" 2>&1); then
+				epr "Not building $table, apk signature mismatch '$a': $sig_op"
+				return 0
+			fi
+		done
+		rm -rf "${stock_apk}-zip" || :
+	else
+		if ! sig_op=$(check_sig "$stock_apk" "$pkg_name" 2>&1); then
+			epr "Not building $table, apk signature mismatch '$stock_apk': $sig_op"
+			return 0
+		fi
+	fi
+	log "${table}: ${version}"
 
-  local microg_patch
-  microg_patch=$(grep "^Name: " <<<"$list_patches" | grep -i "gmscore\|microg" || :) microg_patch=${microg_patch#*: }
-  if [ -n "$microg_patch" ] && [[ ${p_patcher_args[*]} =~ $microg_patch ]]; then
-    epr "You cant include/exclude microg patch as that's done by rvmm builder automatically."
-    p_patcher_args=("${p_patcher_args[@]//-[ei] ${microg_patch}/}")
-  fi
+	local microg_patch
+	microg_patch=$(grep "^Name: " <<<"$list_patches" | grep -i "gmscore\|microg" || :) microg_patch=${microg_patch#*: }
+	if [ -n "$microg_patch" ] && [[ ${p_patcher_args[*]} =~ $microg_patch ]]; then
+		wpr "You cant include/exclude microg patch as that's done by rvmm builder automatically."
+		p_patcher_args=("${p_patcher_args[@]//-[ei] ${microg_patch}/}")
+	fi
 
-  local spoof_client_patch
-  spoof_client_patch=$(grep "^Name: " <<<"$list_patches" | grep -i "Spoof Client" || :) spoof_client_patch=${spoof_client_patch#*: }
-  local spoof_video_patch
-  spoof_video_patch=$(grep "^Name: " <<<"$list_patches" | grep -i "Spoof Video" || :) spoof_video_patch=${spoof_video_patch#*: }
+	local patcher_args patched_apk build_mode
+	local rv_brand_f=${args[rv_brand],,}
+	rv_brand_f=${rv_brand_f// /-}
+	if [ "${args[patcher_args]}" ]; then p_patcher_args+=("${args[patcher_args]}"); fi
+	for build_mode in "${build_mode_arr[@]}"; do
+		patcher_args=("${p_patcher_args[@]}")
+		pr "Building '${table}' in '$build_mode' mode"
+		if [ -n "$microg_patch" ]; then
+			patched_apk="${TEMP_DIR}/${app_name_l}-${rv_brand_f}-${version_f}-${arch_f}-${build_mode}.apk"
+		else
+			patched_apk="${TEMP_DIR}/${app_name_l}-${rv_brand_f}-${version_f}-${arch_f}.apk"
+		fi
+		if [ -n "$microg_patch" ]; then
+			if [ "$build_mode" = apk ]; then
+				patcher_args+=("-e \"${microg_patch}\"")
+			elif [ "$build_mode" = module ]; then
+				patcher_args+=("-d \"${microg_patch}\"")
+			fi
+		fi
 
-  local patcher_args patched_apk build_mode
-  local rv_brand_f
-  if [ "${args[rv_brand]}" = "ReVanced Extended" ]; then
-    rv_brand_f="rvx"
-  else
-    rv_brand_f=${args[rv_brand],,}
-    rv_brand_f=${rv_brand_f// /-}
-  fi
-  for build_mode in "${build_mode_arr[@]}"; do
-    patcher_args=("${p_patcher_args[@]}")
-    pr "Building '${table}' in '$build_mode' mode"
-    if [ -n "$microg_patch" ]; then
-      patched_apk="${TEMP_DIR}/${app_name_l}-${rv_brand_f}-${version_f}-${arch_f}-${build_mode}.apk"
-    else
-      patched_apk="${TEMP_DIR}/${app_name_l}-${rv_brand_f}-${version_f}-${arch_f}.apk"
-    fi
-    if [ -n "$microg_patch" ]; then
-      if [ "$build_mode" = apk ]; then
-        patcher_args+=("-e \"${microg_patch}\"")
-      elif [ "$build_mode" = module ]; then
-        patcher_args+=("-d \"${microg_patch}\"")
-      fi
-    fi
-    if [ -n "$spoof_client_patch" ] && [[ ! ${p_patcher_args[*]} =~ $spoof_client_patch ]] && [ "$build_mode" = module ]; then
-      patcher_args+=("-d \"${spoof_client_patch}\"")
-    fi
-    if [ -n "$spoof_video_patch" ] && [[ ! ${p_patcher_args[*]} =~ $spoof_video_patch ]] && [ "$build_mode" = module ]; then
-      patcher_args+=("-d \"${spoof_video_patch}\"")
-    fi
-    if [ "${args[riplib]}" = true ]; then
-      patcher_args+=("--rip-lib x86_64 --rip-lib x86")
-      if [ "$build_mode" = module ]; then
-        patcher_args+=("--rip-lib arm64-v8a --rip-lib armeabi-v7a --unsigned")
-      else
-        if [ "$arch" = "arm64-v8a" ]; then
-          patcher_args+=("--rip-lib armeabi-v7a")
-        elif [ "$arch" = "arm-v7a" ]; then
-          patcher_args+=("--rip-lib arm64-v8a")
-        fi
-      fi
-    fi
-    if [ "${NORB:-}" != true ] || [ ! -f "$patched_apk" ]; then
-      if ! patch_apk "$stock_apk" "$patched_apk" "${patcher_args[*]}" "${args[cli]}" "${args[ptjar]}"; then
-        epr "Building '${table}' failed!"
-        return 0
-      fi
-    fi
-    if [ "$build_mode" = apk ]; then
-      local apk_output="${BUILD_DIR}/${app_name_l}-${rv_brand_f}-v${version_f}-${arch_f}.apk"
-      mv -f "$patched_apk" "$apk_output"
-      pr "Built ${table} (non-root): '${apk_output}'"
-      continue
-    fi
-    local base_template
-    base_template=$(mktemp -d -p "$TEMP_DIR")
-    cp -a $MODULE_TEMPLATE_DIR/. "$base_template"
-    local upj="${table,,}-update.json"
+		local stock_apk_to_patch="${stock_apk}.stripped.apk"
+		cp -f "$stock_apk" "$stock_apk_to_patch"
+		if [ "$build_mode" = module ]; then
+			zip -d "$stock_apk_to_patch" "lib/*" >/dev/null 2>&1 || :
+		else
+			if [ "$arch" = "arm64-v8a" ]; then
+				zip -d "$stock_apk_to_patch" "lib/armeabi-v7a/*" "lib/x86_64/*" "lib/x86/*" >/dev/null 2>&1 || :
+			elif [ "$arch" = "arm-v7a" ]; then
+				zip -d "$stock_apk_to_patch" "lib/arm64-v8a/*" "lib/x86_64/*" "lib/x86/*" >/dev/null 2>&1 || :
+			elif [ "$arch" = "x86" ]; then
+				zip -d "$stock_apk_to_patch" "lib/arm64-v8a/*" "lib/x86_64/*" "lib/armeabi-v7a/*" >/dev/null 2>&1 || :
+			elif [ "$arch" = "x86_64" ]; then
+				zip -d "$stock_apk_to_patch" "lib/arm64-v8a/*" "lib/armeabi-v7a/*" "lib/x86/*" >/dev/null 2>&1 || :
+			else
+				zip -d "$stock_apk_to_patch" "lib/x86_64/*" "lib/x86/*" >/dev/null 2>&1 || :
+			fi
+		fi
+		if [ "${NORB:-}" != true ] || [ ! -f "$patched_apk" ]; then
+			if ! patch_apk "$stock_apk_to_patch" "$patched_apk" "${patcher_args[*]}" "${args[cli]}" "${args[ptjar]}"; then
+				epr "Building '${table}' failed!"
+				return 0
+			fi
+		fi
+		rm "$stock_apk_to_patch"
+		if [ "$build_mode" = apk ]; then
+			local apk_output="${BUILD_DIR}/${app_name_l}-${rv_brand_f}-v${version_f}-${arch_f}.apk"
+			mv -f "$patched_apk" "$apk_output"
+			pr "Built ${table} (non-root): '${apk_output}'"
+			continue
+		fi
+		local base_template
+		base_template=$(mktemp -d -p "$TEMP_DIR")
+		cp -a $MODULE_TEMPLATE_DIR/. "$base_template"
+		local upj="${table,,}-update.json"
 
-    module_config "$base_template" "$pkg_name" "$version" "$arch"
+		module_config "$base_template" "$pkg_name" "$version" "$arch"
 
-    local rv_patches_ver
-    rv_patches_ver=$(basename "$rv_patches_jar" .rvp)
-    rv_patches_ver="${rv_patches_ver#patches-}"
-    module_prop \
-      "${args[module_prop_name]}" \
-      "${app_name} ${rv_brand_f^^}" \
-      "${version} (anddea patches-${rv_patches_ver})" \
-      "${app_name} ${rv_brand_f^^} Magisk module" \
-      "${upj}" \
-      "$base_template" \
-      "${DEF_UPDATE_BRANCH}"
+		local patches_ver="${patches_jar##*-}"
+		module_prop \
+			"${args[module_prop_name]}" \
+			"${app_name} ${args[rv_brand]}" \
+			"${version} (patches ${patches_ver})" \
+			"${app_name} ${args[rv_brand]} module" \
+			"https://raw.githubusercontent.com/${GITHUB_REPOSITORY-}/update/${upj}" \
+			"$base_template"
 
-    local module_output="${app_name_l}-${rv_brand_f}-magisk-v${version_f}-${arch_f}.zip"
-    pr "Packing module ${table}"
-    cp -f "$patched_apk" "${base_template}/base.apk"
-    if [ "${args[include_stock]}" = true ]; then cp -f "$stock_apk" "${base_template}/${pkg_name}.apk"; fi
-    pushd >/dev/null "$base_template" || abort "Module template dir not found"
-    zip -"$COMPRESSION_LEVEL" -FSqr "${CWD}/${BUILD_DIR}/${module_output}" .
-    popd >/dev/null || :
-    pr "Built ${table} (root): '${BUILD_DIR}/${module_output}'"
-  done
+		local module_output="${app_name_l}-${rv_brand_f}-module-v${version_f}-${arch_f}.zip"
+		pr "Packing module ${table}"
+		cp -f "$patched_apk" "${base_template}/base.apk"
+		if [ "${args[include_stock]}" = true ]; then cp -f "$stock_apk" "${base_template}/${pkg_name}.apk"; fi
+		pushd >/dev/null "$base_template" || abort "Module template dir not found"
+		zip -"$COMPRESSION_LEVEL" -FSqr "${CWD}/${BUILD_DIR}/${module_output}" .
+		popd >/dev/null || :
+		pr "Built ${table} (root): '${BUILD_DIR}/${module_output}'"
+	done
 }
 
 list_args() { tr -d '\t\r' <<<"$1" | tr -s ' ' | sed 's/" "/"\n"/g' | sed 's/\([^"]\)"\([^"]\)/\1'\''\2/g' | grep -v '^$' || :; }
 join_args() { list_args "$1" | sed "s/^/${2} /" | paste -sd " " - || :; }
 
 module_config() {
-  local ma=""
-  if [ "$4" = "arm64-v8a" ]; then
-    ma="arm64"
-  elif [ "$4" = "arm-v7a" ]; then
-    ma="arm"
-  fi
-  echo "PKG_NAME=$2
+	local ma=""
+	if [ "$4" = "arm64-v8a" ]; then
+		ma="arm64"
+	elif [ "$4" = "arm-v7a" ]; then
+		ma="arm"
+	fi
+	echo "PKG_NAME=$2
 PKG_VER=$3
 MODULE_ARCH=$ma" >"$1/config"
 }
 module_prop() {
-  local update_branch=${7:-update}
-  echo "id=${1}
+	echo "id=${1}
 name=${2}
 version=v${3}
 versionCode=${NEXT_VER_CODE}
-author=j-hc, hxreborn
+author=j-hc
 description=${4}" >"${6}/module.prop"
 
-  if [ "$ENABLE_MAGISK_UPDATE" = true ]; then
-    echo "updateJson=https://raw.githubusercontent.com/${GITHUB_REPOSITORY-}/${update_branch}/${5}" >>"${6}/module.prop"
-  fi
+	if [ "$ENABLE_MODULE_UPDATE" = true ]; then echo "updateJson=${5}" >>"${6}/module.prop"; fi
 }
